[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pausepal"
version = "0.1.0"
description = "PausePal is a simple and intuitive desktop application designed to improve productivity and well-being by encouraging regular breaks."
authors = [ "abdelmalek0 <djamaa.abdelmalek98@gmail.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
